# Project-221-353

./: CMakeLists.txt  README.md
client_src/: .clang-uml  .gitignore  CMakeLists.txt  _CMakeLists.txt  client.pro  compile_commands.json
client_src/UI/: client_login_reg_window.ui  user_menu.ui
client_src/puml/: AbstractAdapter.puml
client_src/src/: SharedObjects.cpp  SharedObjects.hpp  Transport.cpp  Transport.hpp  main.cpp
client_src/src/Adapter/: AbstractAdapter.cpp  AbstractAdapter.hpp  ConnectionStatusAdapter.cpp  ConnectionStatusAdapter.hpp
client_src/src/Enum/: FSMType.hpp  RequestMethod.hpp  StatType.hpp
client_src/src/Exception/: ConnectionException.hpp
client_src/src/Model/: StatModel.cpp  StatModel.hpp  UserStateModel.cpp  UserStateModel.hpp
client_src/src/Tools/: RequestsTools.cpp  RequestsTools.hpp
client_src/src/Window/: ClientCredentialsWindow.cpp  ClientCredentialsWindow.hpp  ClientCredentialsWindow.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NotificationWindow.cpp  NotificationWindow.hpp  NotificationWindow.ui  StudentGetTaskWindow.cpp  StudentGetTaskWindow.hpp  StudentGetTaskWindow.ui  StudentTaskWindow.cpp  StudentTaskWindow.hpp  StudentTaskWindow.ui  TeacherStatsWindow.cpp  TeacherStatsWindow.hpp  TeacherStatsWindow.ui
client_src/src/ui/: client.ui  client_login_reg.ui  teacher_menu.ui
server_src/: .clang-uml  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  compile_commands.json  server.pro
server_src/examples/: configuration.json
server_src/include/: ArgsParser.hpp  ClientContainer.hpp  ClientCore.hpp  ProcessorCore.hpp  ProcessorStorageCore.hpp  ServerCore.hpp  SharedObjects.hpp
server_src/include/Enum/: FSMTypeEnum.hpp  RequestMethod.hpp  StatType.hpp  UserAuthStateEnum.hpp
server_src/include/Exception/: AbstractRuntimeException.hpp  ConfigurationException.hpp
server_src/include/Migration/: AbstractMigration.hpp  MigrationsIndex.hpp  StatMigration.hpp  TaskMigration.hpp  UserMigration.hpp
server_src/include/Model/: AbstractModel.hpp  StatMigration.hpp  StatModel.hpp  TaskModel.hpp  UserModel.hpp  UserStateModel.hpp
server_src/include/Processor/: AbstractProcessor.hpp  AuthUserProcessor.hpp  CreateUserProcessor.hpp  GeneralProcessor.hpp  GetStatProcessor.hpp  GetTaskProcessor.hpp  SendTaskProcessor.hpp
server_src/include/Task/: MachineSolver.hpp  MachineState.hpp  MealyGen.hpp  MealySolve.hpp  MealyState.hpp  MealySuperposition.hpp  MealyToMoore.hpp  MooreGen.hpp  MooreSolve.hpp  MooreState.hpp  MooreSuperposition.hpp  SuperState.hpp  SuperpositionMoore.hpp
server_src/include/Tools/: PasswordTools.hpp  TaskTools.hpp
server_src/puml/: AbstractAdapter.puml
server_src/src/: ClientCore.cpp  ProcessorCore.cpp  ServerCore.cpp  SharedObjects.cpp  main.cpp
server_src/src/Migration/: AbstractMigration.cpp  MigrationsIndex.cpp  UserMigration.cpp
server_src/src/Model/: StatModel.cpp  TaskModel.cpp  UserModel.cpp  UserStateModel.cpp
server_src/src/Processor/: AbstractProcessor.cpp  AuthUserProcessor.cpp  CreateUserProcessor.cpp  GeneralProcessor.cpp  GetStatProcessor.cpp  GetTaskProcessor.cpp  SendTaskProcessor.cpp
server_src/src/Tools/: PasswordTools.cpp  TaskTools.cpp
unit_tests/: .gitignore  unit_tests.pro
unit_tests/src/: FSMTest.cpp
